# sogangcomputerclub.org

./: .cz-config.js  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MAINTAINER_GUIDE.md  MONITORING.md  README.md  SECURITY.md  commitlint.config.js  docker-compose.aws.yml  docker-compose.prod.yml  docker-compose.yml  env.example  nginx-aws.conf  nginx-sogangcomputerclub.conf  nginx.conf  prometheus.yml  pyproject.toml  verify_db.py
.agent/rules/: contribution-guide.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml  release-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-merge.yml  backend-ci.yml  codeql.yml  deploy-aws.yml  deploy-production.yml  docker-build.yml  frontend-ci.yml  integration-tests.yml  pr-auto-assign.yml  pr-labeler.yml  pr-validation.yml  release.yml  security-scan.yml  stale.yml  sync-upstream.yml  validate-pr.yml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_users_table.py  b2c3d4e5f6g7_add_search_indexes.py  c3d4e5f6g7h8_drop_users_table.py  d7d5dc8a9fe3_initial_migration.py
app/: auth.py  config.py  main.py  metrics.py  middleware.py  rate_limit.py
app/common/: __init__.py  metrics.py  middleware.py  rate_limit.py
app/core/: __init__.py  config.py  database.py  dependencies.py  repository.py  security.py
app/events/: __init__.py  dependencies.py  publisher.py  publisher_kafka.py  publisher_sqs.py
app/health/: __init__.py  router.py
app/memos/: __init__.py  dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
app/models/: __init__.py  memo.py  user.py
app/routers/: __init__.py  auth.py  health.py  memos.py
backups/: README.md
deploy/: docker-compose.aws.yml  docker-compose.prod.yml  docker-compose.yml
docs/: README.md  api-reference.md  architecture.md  backend.md  cheatsheet.md  deployment.md  frontend.md  getting-started.md  github-labels.md  infrastructure.md  testing.md  troubleshooting.md
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
infrastructure/: .gitignore  README.md  cloudwatch.tf  ec2.tf  ecr.tf  github_oidc.tf  iam_admin.tf  main.tf  outputs.tf  rds.tf  secrets.tf  security_groups.tf  sqs.tf  terraform.tfvars.example  variables.tf  vpc.tf
scripts/: backup-database.sh  certbot.sh  check.sh  cleanup_infrastructure.sh  fetch-secrets.sh  fix_sequence.py  init_test_db.py  manage-certs.sh  migrate_db.py  nginx.sh  restore-database.sh  setup-ec2.sh  setup-production-server.sh  setup-ssl.sh
tests/: conftest.py  test_health.py  test_memos.py  test_sqs_publisher.py  test_users.py
(+82 files in other folders)
