[project]
name = "sogangcomputerclub-org"
version = "0.1.0"
description = "This is the backend package of sogangcomputerclub.org"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Web Framework
    "fastapi==0.115.2",
    "uvicorn==0.32.0",
    "pydantic==2.9.2",
    "pydantic-settings>=2.0.0",
    
    # Database (PostgreSQL)
    "sqlalchemy==2.0.32",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0",
    
    # Cache & Messaging
    "redis==5.1.0",
    "aiokafka==0.11.0",
    
    # Monitoring & Logging
    "prometheus-client>=0.21.0",
    "python-json-logger==2.0.7",

    # Security & Rate Limiting
    "slowapi>=0.1.9",
    "email-validator>=2.0.0",
]

# REMOVED unused dependencies:
# - pymysql (not using MySQL)
# - aiomysql (not using MySQL)
# - psycopg2-binary (using asyncpg for async PostgreSQL)
# - icmplib (was unused)

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
    "locust>=2.32.0",
    "aiosqlite>=0.20.0",  # For SQLite test database
    "ruff>=0.4.0",  # Code linting and formatting
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
