[project]
name = "sogangcomputerclub-org"
version = "0.1.0"
description = "This is the backend package of sogangcomputerclub.org"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Web Framework
    "fastapi>=0.115.14",  # includes starlette>=0.49.1 (CVE-2025-62727)
    "uvicorn>=0.32.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.0.0",

    # Database (PostgreSQL)
    "sqlalchemy==2.0.32",
    "asyncpg>=0.29.0",
    
    # Note: Redis/Kafka/SQS 제거됨 (동아리 규모에서 불필요)
    # Rate limiting은 in-memory storage 사용
    # 필요 시 redis, aiokafka, boto3, aioboto3 추가
    
    # Monitoring
    "prometheus-client>=0.21.0",

    # Security & Rate Limiting
    "slowapi>=0.1.9",
]

# REMOVED unused dependencies:
# - pymysql (not using MySQL)
# - aiomysql (not using MySQL)
# - psycopg2-binary (using asyncpg for async PostgreSQL)
# - icmplib (was unused)

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
    "locust>=2.32.0",
    "aiosqlite>=0.20.0",  # For SQLite test database
    "ruff>=0.4.0",  # Code linting and formatting
    "pre-commit>=3.6.0",  # Git hooks for code quality
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
